# PortfolioSuite

./: .gitignore  CHATGPT_DEFAULT_SUMMARY.md  CODE_REVIEW_NETWORK_DETECTION.md  DEV_NOTES.md  Dual_Model_Implementation_Plan.md  FINAL_CLEANUP_REPORT.md  FINAL_CODE_REVIEW_NETWORK_DETECTION.md  Full_2-Week_Prediction_Table__July_26_.csv  INSTALLATION_COMPLETE.md  NETWORK_DETECTION_GUIDE.md  PROJECT_STATUS.md  PortfolioSuite.code-workspace  QUICKSTART.md  QUICK_LAUNCH.md  QUICK_START.md  QUICK_START_CONSOLIDATED.md  README.md  SESSION_HISTORY.md  TRADE_SYSTEM_DOCS.md  Trading_Memory_Summary_2025-06-26.csv  analyze_range_differences.py  analyze_spy_target.py  automated_trade_analysis.py  chatgpt_atr_verification.py  check_and_run.py  compare_atr_vs_chatgpt.py  comprehensive_atr_analysis.py  debug_predictions.py  debug_step_by_step.py  demo_trade_system.py  final_comparison_summary.py  investigate_differences.py  main_app.py  options_analyzer.py  options_direct.py  options_tracker.py  options_tracker_ui.py  portfolio_results.pkl  pyproject.toml  quality_tracker.py  (+33 more)
.streamlit/: config.toml
archived_files/debug_scripts/: compare_top10_simple.py  debug_auto_discovery.py  debug_top10_mismatch.py  final_auto_discovery_test.py  final_auto_discovery_verification.py  final_ui_test.py  ranking_comparison.py  ranking_comparison_v2.py  system_verification.py  test_enhanced_discovery.py  test_etf_direct.py  test_etf_market_cap.py  test_ranking_fix.py  trace_original_flow.py  trace_original_flow_v2.py
archived_files/documentation/: CLEANUP_SUMMARY.md  EDGE_COMPATIBILITY.md  IMPLEMENTATION_SUMMARY.md  OPTIONSTRAT_URL_FIX.md  PRICING_FIX_SUCCESS.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  UI_TESTS_FIXED_SUMMARY.md  cleanup_proposal.md  tactical_portfolio_app_requirements.md
archived_files/obsolete_tests/: test_optionstrat_urls.py
archived_files/test_scripts/: TEST_COVERAGE_SUMMARY.md  test_system_parity.py
data/: trades.json
data/trades/: Trading_Memory_Summary_2025-06-26.csv  trades.json
docs/: ADJUSTABLE_MULTIPLIER_SUMMARY.md  ALGORITHM_VERIFICATION_REPORT.md  Dual_Model_Price_Prediction_Spec.md  ROOT_CLEANUP_SUMMARY.md  TESTING_FRAMEWORK.md
options_tracker/core/: __init__.py
options_tracker/gui/: __init__.py
options_tracker/ui/: __init__.py
portfolio_management_suite/: CLEANUP_SUMMARY.md  MANIFEST.in  PORT_CONFIGURATION.md  build.sh  config.toml  requirements.txt
portfolio_management_suite/data/: options_trades.pkl  portfolio_results.pkl
scripts/: launch_web.sh  run_tests.sh  verify_installation.py
src/: __init__.py  _get_implied_volatility.py  add_iv_function.py  demo_improvements.py  main_app.py  options_tracker.py  options_tracker_ui.py  streamlit_app.py  test_extreme_market_conditions.py  test_extreme_market_conditions_simple.py  test_hybrid_model.py  test_hybrid_price_prediction.py  test_prediction.py  test_tracker.py
test_install_bundle_final/: INSTALLATION_PACKAGE_README.md  portfolio_management_suite-2.0.0-py3-none-any.whl
tests/: README.md  comprehensive_test_suite.py  debug_actual_strikes.py  debug_nvda_pricing.py  debug_trade.py  debug_url_generation.py  demo_enhanced_analysis.py  final_verification.py  fix_imports.py  fix_imports_src.py  master_test_runner.py  options_trades.pkl  portfolio_results.pkl  run_all_tests.py  run_core_tests.py  run_dual_model_tests.py  run_system_verification.py  run_tests.py  test.sh  test_adjustable_multiplier.py  test_all_pkl_creation.py  test_analysis.py  test_atr_specification.py  test_bear_call_url.py  test_chatgpt_algorithm.py  test_complete_suite.py  test_complete_system.py  test_config.py  test_core.py  test_decimal_strikes.py  test_defensive_allocation.py  test_deterministic.py  test_dual_model_core.py  test_dual_model_end_to_end.py  test_dual_model_performance.py  test_dual_model_strategy.py  test_dual_model_ui.py  test_dynamic_watchlist.py  test_enhanced_analysis.py  test_environment_setup.py  (+38 more)
(+60 files in other folders)
